--- a/ebook/assets/language/ar.json
+++ b/ebook/assets/language/ar.json
@@ -59,5 +59,37 @@
   "my_books": "كتبي",
   "my_records": "سجلاتي",
   "favorite": "المفضله",
-  "my_profile": "ملفي"
+  "my_profile": "ملفي",
+  "hi": "مرحبا",
+  "sign_in_to_continue": "قم بتسجيل الدخول للمتابعه",
+  "email": "البريد الالكتروني",
+  "password": "كلمه السر",
+  "forgot_password": "نسيت كلمه السر؟",
+  "sign_in": "تسجيل الدخول",
+  "progress": "متابعة التقدم",
+  "assignments": "الواجبات",
+  "student_activities": "نشاطات الطلاب",
+  "audio_reading": "القراءة الصوتية",
+  "compare_performance": "مقارنة الاداء",
+  "learning_styles": "انماط التعلم",
+  "classroom": "غرفة الصف",
+  "my_messages": "رسائلي",
+  "browse_content": "تصفح المحتوي",
+  "training": "تدريب",
+  "create_reading_assignment": "انشاء واجب قرائي",
+  "follow_assignment": "متابعة الواجبات",
+  "assignments_list": "قائمة الواجبات",
+  "student": "الطالب",
+  "student_level": "مستوي الطالب",
+  "assignment_title": "أسم الواجب",
+  "start_on": "يبدأ في",
+  "end_on": "ينتهي في",
+  "choose_class": "اختر الصف",
+  "all_students": "كل الطلاب",
+  "level": "المستوي",
+  "total": "المجموع",
+  "completed": "المنجزة",
+  "remaining": "المتبقية",
+  "test": "اختبار",
+  "tasks": "مهام"
 }
