--- a/ebook/assets/language/en.json
+++ b/ebook/assets/language/en.json
@@ -60,5 +60,37 @@
   "my_books": "My Books",
   "my_records": "My Records",
   "favorite": "Favorite",
-  "my_profile": "My Profile"
+  "my_profile": "My Profile",
+  "hi": "Hi !",
+  "sign_in_to_continue": "Sign in to continue",
+  "email": "Email Adress",
+  "password": "Password",
+  "forgot_password": "Forget Password ?",
+  "sign_in": "Sign In",
+  "progress": "Progress",
+  "assignments": "Assignments",
+  "student_activities": "Student Activities",
+  "audio_reading": "Audio Reading",
+  "compare_performance": "Compare Performance",
+  "learning_styles": "Learning Styles",
+  "classroom": "Classroom",
+  "my_messages": "My Messages",
+  "browse_content": "Browse Content",
+  "training": "Training",
+  "create_reading_assignment": "Create Reading Assignment",
+  "follow_assignment": "Follow Assignment",
+  "assignments_list": "Assignments List",
+  "student": "Student",
+  "student_level": "Student Level",
+  "assignment_title": "Assignment Title",
+  "start_on": "Starts On",
+  "end_on": "Ends On",
+  "choose_class": "Choose Class",
+  "all_students": "All Students",
+  "level": "Level",
+  "total": "Total",
+  "completed": "Completed",
+  "remaining": "Remaining",
+  "test": "Test",
+  "tasks": "Tasks"
 }
