--- a/ebook/assets/language/ar.json
+++ b/ebook/assets/language/ar.json
@@ -93,5 +93,6 @@
   "completed": "المنجزة",
   "remaining": "المتبقية",
   "test": "اختبار",
-  "tasks": "مهام"
+  "tasks": "مهام",
+  "my_assignments": "واجباتي"
 }
