--- a/ebook/assets/language/en.json
+++ b/ebook/assets/language/en.json
@@ -94,5 +94,6 @@
   "completed": "Completed",
   "remaining": "Remaining",
   "test": "Test",
-  "tasks": "Tasks"
+  "tasks": "Tasks",
+  "my_assignments": "My Assignments"
 }
