--- a/ebook/assets/language/ar.json
+++ b/ebook/assets/language/ar.json
@@ -94,5 +94,6 @@
   "remaining": "المتبقية",
   "test": "اختبار",
   "tasks": "مهام",
-  "my_assignments": "واجباتي"
+  "my_assignments": "واجباتي",
+  "my_favorites": "المفضله"
 }
