--- a/ebook/assets/language/en.json
+++ b/ebook/assets/language/en.json
@@ -95,5 +95,6 @@
   "remaining": "Remaining",
   "test": "Test",
   "tasks": "Tasks",
-  "my_assignments": "My Assignments"
+  "my_assignments": "My Assignments",
+  "my_favorites": "My Favorites"
 }
