--- a/ebook/assets/language/ar.json
+++ b/ebook/assets/language/ar.json
@@ -33,7 +33,6 @@
   "settings": "الاعدادات",
   "services": "الخدمات",
   "books": "كتب",
-  "about": "عن التطبيق",
   "details": "التفاصيل",
   "success": "تم النجاح",
   "bad_request_error": "طلب غير صالح. حاول مرة أخرى لاحقًا",
@@ -95,5 +94,22 @@
   "test": "اختبار",
   "tasks": "مهام",
   "my_assignments": "واجباتي",
-  "my_favorites": "المفضله"
+  "my_favorites": "المفضله",
+  "profile": "الملف الشخصي",
+  "modify": "تعديل",
+  "tap_to_change_your_data": "اضغط لتغيير بياناتك",
+  "dark_mode": "الوضع الليلي",
+  "automatic": "تلقائي",
+  "listening": "الاستماع",
+  "reading": "القراءة",
+  "exam": "الاختبار",
+  "number_of_pages": "عدد الصفحات",
+  "number_of_words": "عدد الكلمات",
+  "book_language": "لغه الكتاب",
+  "description": "الوصف",
+  "author": "المؤلف",
+  "publisher_house": "دار النشر",
+  "about_app": "حول التطبيق",
+  "learn_more_about_app": "تعرف علي المزيد عن التطبيق",
+  "sign_out": "تسجيل الخروج"
 }
