--- a/ebook/assets/language/en.json
+++ b/ebook/assets/language/en.json
@@ -33,7 +33,6 @@
   "settings": "Settings",
   "services": "Services",
   "books": "Books",
-  "about": "About Store",
   "details": "Details",
   "success": "success",
   "bad_request_error": "bad request. try again later",
@@ -96,5 +95,22 @@
   "test": "Test",
   "tasks": "Tasks",
   "my_assignments": "My Assignments",
-  "my_favorites": "My Favorites"
+  "my_favorites": "My Favorites",
+  "profile": "Profile",
+  "modify": "Modify",
+  "tap_to_change_your_data": "Tap to change your data",
+  "dark_mode": "Dark Mode",
+  "automatic": "Automatic",
+  "listening": "Listening",
+  "reading": "Reading",
+  "exam": "Exam",
+  "number_of_pages": "Number of Pages",
+  "number_of_words": "Number of Words",
+  "book_language": "Book Language",
+  "description": "Description",
+  "author": "Author",
+  "publisher_house": "Publisher house",
+  "about_app": "About App",
+  "learn_more_about_app": "Learn more about E-Book app",
+  "sign_out": "Sign Out"
 }
