--- a/library_app/assets/language/en.json
+++ b/library_app/assets/language/en.json
@@ -117,5 +117,8 @@
   "class_room": "Class Room",
   "book_details": "Book Details",
   "add_assignment": "Add Assignment",
-  "congratulations": "Congratulations"
+  "congratulations": "Congratulations",
+  "are_you_sure_you_want_to_delete": "Are you sure \n you want to delete ?",
+  "yes": "Yes",
+  "no": "No"
 }
