--- a/library_app/assets/language/ar.json
+++ b/library_app/assets/language/ar.json
@@ -116,6 +116,7 @@
   "class_room": "غرفة الصف",
   "book_details": "تفاصيل الكتاب",
   "add_assignment": "اضافه واجب",
+  "assignment_details": "تفاصيل الواجب",
   "congratulations": "تهانينا",
   "are_you_sure_you_want_to_delete": "هل انت متاكد من الحذف ؟",
   "yes": "نعم",
