--- a/library_app/assets/language/en.json
+++ b/library_app/assets/language/en.json
@@ -117,6 +117,7 @@
   "class_room": "Class Room",
   "book_details": "Book Details",
   "add_assignment": "Add Assignment",
+  "assignment_details": "Assignment Details",
   "congratulations": "Congratulations",
   "are_you_sure_you_want_to_delete": "Are you sure \n you want to delete ?",
   "yes": "Yes",
