--- a/library_app/assets/language/ar.json
+++ b/library_app/assets/language/ar.json
@@ -1,8 +1,9 @@
 {
   "no_route_found": "لا توجد شاشه",
-  "on_boarding_title1": "شاهد افضل كورس #١",
-  "on_boarding_title2": "شاهد افضل كورس #٢",
-  "on_boarding_title3": "شاهد افضل كورس #٣",
+  "on_boarding_title1": "افضل تطبيق كتب ",
+  "on_boarding_title2": "يمكنك فعل المزيد",
+  "on_boarding_title3": "جرب الان وتعلم ",
+  "get_started": "ابدأ",
   "on_boarding_subtitle1": "تطبيق توت يكون تطبيق رائع باستخدام اساس منظم #١",
   "on_boarding_subtitle2": "تطبيق توت يكون تطبيق رائع باستخدام اساس منظم #٢",
   "on_boarding_subtitle3": "تطبيق توت يكون تطبيق رائع باستخدام اساس منظم #٣",
