--- a/library_app/assets/language/en.json
+++ b/library_app/assets/language/en.json
@@ -121,5 +121,6 @@
   "congratulations": "Congratulations",
   "are_you_sure_you_want_to_delete": "Are you sure \n you want to delete ?",
   "yes": "Yes",
-  "no": "No"
+  "no": "No",
+  "get_started": "Get Started"
 }
