--- a/library_app/assets/language/en.json
+++ b/library_app/assets/language/en.json
@@ -76,7 +76,7 @@
   "my_messages": "My Messages",
   "browse_content": "Browse Content",
   "training": "Training",
-  "create_reading_assignment": "Create Reading Assignment",
+  "create_reading_assignment": "Add Assignment",
   "follow_assignment": "Follow Assignment",
   "assignments_list": "Assignments List",
   "student": "Student",
