--- a/library_app/assets/language/ar.json
+++ b/library_app/assets/language/ar.json
@@ -127,5 +127,6 @@
   "result": "النتيجه",
   "please_select_book": "الرجاء اختيار كتاب",
   "please_enter_title": "الرجاء ادخال العنوان",
-  "please_select_date": "الرجاء اختيار التاريخ"
+  "please_select_date": "الرجاء اختيار التاريخ",
+  "please_choose_students": "الرجاء اختيار الطلاب"
 }
